--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,12 @@ services:
       - 3000:3000
     command: /app/scripts/start.sh
 
+  maildev:
+    container_name: todddo-maildev
+    image: maildev/maildev
+    environment:
+      - MAILDEV_WEB_PORT=1080
+      - MAILDEV_SMTP_PORT=1025
+    ports:
+      - "1080:1080"
+      - "1025:1025"
