--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,12 @@
 require: rubocop-rails
+
+AllCops:
+  NewCops: enable
 Style/Documentation:
   Enabled: false
 Metrics/BlockLength:
   Exclude:
     - "spec/**/*.rb"
+Metrics/ParameterLists:
+  CountKeywordArgs: false
+
